2013-05-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Error.h:
	* X3DConstants.h:
	* X3DConstants.cpp:
	* X3DFieldDefinition.h:
	* jsBrowser.h:
	* X3DUrlObject.h:
	* jsBrowser.cpp:
	* jsX3DScene.cpp:
	* jsX3DConstants.h:
	* jsX3DConstants.cpp:
	* JavaScriptContext.cpp:
	* jsX3DExecutionContext.h:
	* jsX3DExecutionContext.cpp: 

2013-05-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Parser.cpp:
	* Proto.h:
	* Proto.cpp:
	* X3DProto.h:
	* ExternProto.h:
	* ExternProto.cpp:
	* X3DExecutionContext.h:
	* X3DExecutionContext.cpp:
	* X3DPrototypeInstance.h:
	* X3DPrototypeInstance.cpp:
	* jsX3DExecutionContext.cpp: 

2013-05-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Script.h:
	* Script.cpp:
	* jsGlobals.h:
	* X3DScriptNode.h:
	* X3DUrlObject.h:
	* jsGlobals.cpp:
	* X3DScriptNode.cpp:
	* X3DUrlObject.cpp:
	* QuadSphereProperties.h:
	* JavaScriptContext.h:
	* QuadSphereProperties.cpp:
	* JavaScriptContext.cpp: 

2013-05-12  Holger Seelig  <holger.seelig@yahoo.de>

	* IndexedLineSet.cpp: 

2013-05-12  Holger Seelig  <holger.seelig@yahoo.de>

	* IndexedFaceSet.cpp: 

2013-05-11  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.cpp:
	* X3DGeometryNode.h:
	* X3DGeometryNode.cpp:
	* IndexedFaceSet.cpp: 

2013-05-11  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.cpp:
	* X3DBrowserContext.cpp:
	* JavaScriptContext.cpp: 

2013-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DGeometryNode.cpp: 

2013-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DField.h:
	* Router.h:
	* X3DBaseNode.h:
	* X3DBaseNode.cpp: 

2013-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Router.cpp:
	* X3DBaseNode.cpp:
	* GarbargeCollector.cpp: 

2013-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutput.cpp: 

2013-05-10  Holger Seelig  <holger.seelig@yahoo.de>

	* ExamineViewer.cpp: 

2013-05-09  Holger Seelig  <holger.seelig@yahoo.de>

	* X3D.cpp:
	* X3DBrowser.cpp:
	* PointingDevice.cpp:
	* TimeTrigger.h: